--- a/estate_nursery/reports/reportplantation_prenursery_report.xml
+++ b/estate_nursery/reports/reportplantation_prenursery_report.xml
@@ -12,20 +12,28 @@
 
                     <div class="row">
                         <div class="col-xs-5" >
-                            <strong>Report Name: <p t-field="o.names"/></strong>
+                            <strong>Report Name: <p t-field="o.name"/></strong>
                             <strong>Report Date: <p t-field="o.report_date"/></strong>
+                            <strong>Estate:<p t-field="o.kebun_location_id"/></strong>
                         </div>
                     </div>
+                    <hr></hr>
+
+                    <h2 colors="black">
+                        <span >Detail Batch</span>
+                    </h2>
+                    <hr></hr>
                     <table class="table table-condensed">
                         <thead>
                             <tr>
                                 <th style="width:5%;">Batch No</th>
-                                <th style="width:10%;">Location</th>
+                                <th style="width:5%;">Variety</th>
                                 <th style="width:4%;">DO</th>
                                 <th style="width:4%;">Planted</th>
-                                <th style="width:10%;">Selection Date</th>
+                                <th style="width:4%;">Abnormal</th>
                                 <th style="width:10%;">Selection Stage</th>
-                                <th style="width:10%;">Selection Cause</th>
+                                <th style="width:5%;">Selection Date</th>
+                                <th style="width:10%;">Nursery Information</th>
                                 <th style="width:10%;">Selection Planted</th>
                                 <th style="width:10%;">Comment</th>
                             </tr>
@@ -33,16 +41,14 @@
 
                         <tbody class="selection_tbody">
                             <tr t-foreach="o.selection_ids" t-as="l">
+                                <td style="width:5%;"><span t-field="l.name"/></td>
+                                <td style="width:5%;"><span t-field="l.variety"/></td>
+                                <td style="width:4%;"><span t-field="l.qty_batch"/></td>
+                                <td style="width:4%;"><span t-field="l.qty_plant"/></td>
+                                <td style="width:4%;"><span t-field="l.qty_abnormal"/></td>
                                 <td style="width:10%;"><span t-field="l.selectionstage_id"/></td>
-                                <td style="width:10%;"><span t-field="l.qty_normal"/></td>
-                                <td style="width:10%;"><span t-field="l.qty_abnormal"/></td>
-                                <td style="width:10%;"><span t-field="l.nursery_persentagen"/></td>
-                                <td style="width:10%;"><span t-field="l.nursery_persentagea"/></td>
-                                <td style="width:10%;"><span t-field="l.qty_plant"/></td>
-                                <td style="width:10%;"><span t-field="l.qty_batch"/></td>
-                                <td style="width:10%;"><span t-field="l.date_plant"/></td>
+                                <td style="width:5%;"><span t-field="l.selection_date"/></td>
                                 <td style="width:10%;"><span t-field="l.nursery_information"/></td>
-                                <td style="width:10%;"><span t-field="l.selection_date"/></td>
                             </tr>
                         </tbody>
                     </table>
