--- a/estate_nursery/views/report_plantation_view.xml
+++ b/estate_nursery/views/report_plantation_view.xml
@@ -4,10 +4,10 @@
         <!--view , batchids-->
          <record model="ir.ui.view" id="view_form_report_plantation">
              <field name="name">report plantation</field>
-             <field name="model">estate.nursery.batch</field>
-             <field name="inherit_id" ref="estate_nursery.view_seed_batch_form"/>
+             <field name="model">estate.nursery.selection</field>
+             <field name="inherit_id" ref="estate_nursery.view_form_selection_nursery"/>
              <field name="arch" type="xml">
-                 <field name="culling_location_id" position="after">
+                 <field name="date_plant" position="after">
                      <field name="reportline_id" string="Choose Report"
                             attrs="{'invisible': [('state','=','draft')]}"/>
                  </field>
@@ -22,6 +22,7 @@
                 <tree string="Nursery Report">
                     <field name="name"/>
                     <field name="report_date"/>
+                    <field name="kebun_location_id"/>
                 </tree>
             </field>
         </record>
@@ -34,6 +35,7 @@
                     <group>
                         <group coolspan="10">
                             <field name="name"/>
+                            <field name="kebun_location_id" string="Estate Location"/>
                         </group>
                         <group>
                             <field name="report_date"/>
@@ -43,7 +45,13 @@
                         <notebook >
                             <page string="Report line">
                                 <tree>
-                                    <field name="batch_ids" readonly="1"/>
+                                    <field name="selection_ids" />
+
+                                </tree>
+                            </page>
+                            <page string="Report selection line" invisible="1">
+                                <tree>
+                                    <!--<field name="batch_ids" readonly="1"/>-->
                                 </tree>
                             </page>
                         </notebook>
