--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -133,6 +133,9 @@
                                            Planted: <field name="qty_plant"/>
                                        </li>
                                        <li>
+                                           Age Seed : <field name="age_seed"/>
+                                       </li>
+                                       <li>
                                            Date planted: <field name="date_plant"/>
                                        </li>
                                        <li>
@@ -165,6 +168,7 @@
                     <field name="date_plant"/>
                     <field name="nursery_information"/>
                     <field name="selection_date"/>
+                    <field name="selectionline_ids"/>
                     <field name="state" invisible="1"/>
                 </tree>
             </field>
