--- a/estate_nursery/reports/reportplantation_prenursery_report.xml
+++ b/estate_nursery/reports/reportplantation_prenursery_report.xml
@@ -52,6 +52,25 @@
                             </tr>
                         </tbody>
                     </table>
+                    <table class="table table-condensed">
+                        <thead>
+                            <tr>
+                                <th style="width:5%;">Batch No</th>
+                                <th style="width:10%;">Cause</th>
+                                <th style="width:4%;">Abnormal</th>
+                                <th style="width:10%;">Location</th>
+                            </tr>
+                        </thead>
+
+                        <tbody class="selection_tbody">
+                            <tr t-foreach="o.selectionline_ids" t-as="a">
+                                <td style="width:5%;"><span t-field="a.name"/></td>
+                                <td style="width:10%;"><span t-field="a.cause_id"/></td>
+                                <td style="width:4%;"><span t-field="a.qty"/></td>
+                                <td style="width:10%;"><span t-field="a.location_id"/></td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
             </t>
         </template>
