--- a/estate_nursery/views/estate_nursery_selection_view.xml
+++ b/estate_nursery/views/estate_nursery_selection_view.xml
@@ -46,6 +46,7 @@
         </record>
 
         <!--View,Selection Cause-->
+
         <record model="ir.ui.view" id="view_tree_nursery_cause">
             <field name="name">Batch Selection Cause Tree</field>
             <field name="model">estate.nursery.cause</field>
@@ -87,16 +88,49 @@
         </record>
 
         <!--View,selection-->
-        <record id="view_graph_selection_nursery" model ="ir.ui.view">
-            <field name="name">Selection graph</field>
+        <record id="view_search_selection" model ="ir.ui.view">
+            <field name="name">Selection Search</field>
             <field name="model">estate.nursery.selection</field>
             <field name="arch" type="xml">
-                   <graph string="Graph Selection stage" type="pivot">
+                  <search>
+                      <field name="name"/>
+                      <field name="selectionstage_id"/>
+                      <field name="cause_id"/>
+                      <field name="qty_abnormal"/>
+                      <filter name="selectionstage_id" string="Selection stage"
+                            domain="[('selectionstage_id', '=', uid)]"/>
+                      <filter name="name" string="Selection"
+                            domain="[('name', '=', uid]"/>
+                      <filter name="cause_id" string="Selection Cause"
+                            domain="[('cause_id', '=', uid)]"/>
+                      <filter name="qty_abnormal" string="Abnormal"
+                            domain="[('qty_abnormal', '>', 0)]"/>
+                  </search>
+            </field>
+        </record>
+
+        <record id="view_graph_selection_nursery" model ="ir.ui.view">
+            <field name="name">Selection abnormal</field>
+            <field name="model">estate.nursery.selection</field>
+            <field name="arch" type="xml">
+                   <graph string="Graph Selection stage" type="pie">
+
                        <field name="batch_id" string=" number batch" />
-                       <field name="selectionstage_id" string="stage nursery"/>
                        <field name="qty_abnormal" type="measure"/>
-                       <field name="qty_plant" type="measure"/>
-                       <field name="qty_batch" string="Quantity DO" type="measure"/>
+                       <field name="qty_normal" type="measure"/>
+                   </graph>
+            </field>
+        </record>
+
+        <record id="view_graph_selection_normal_nursery" model ="ir.ui.view">
+            <field name="name">Selection normal</field>
+            <field name="model">estate.nursery.selection</field>
+            <field name="arch" type="xml">
+                   <graph string="Graph Selection stage" type="pie">
+
+                       <field name="batch_id" string=" number batch" />
+                       <!--<field name="qty_abnormal" type="measure"/>-->
+                       <field name="qty_normal" type="measure"/>
                    </graph>
             </field>
         </record>
@@ -285,6 +319,18 @@
         </record>
 
         <!--view selection line-->
+        <record id="view_graph_selectionline_nursery" model ="ir.ui.view">
+            <field name="name">Selection cause</field>
+            <field name="model">estate.nursery.selectionline</field>
+            <field name="arch" type="xml">
+                   <graph string="Graph Selection stage" type="pie">
+                       <field name="selection_id" string="Selection"/>
+                       <field name="cause_id" string="Cause" />
+                       <field name="qty" type="measure"/>
+                   </graph>
+            </field>
+        </record>
+
          <record model="ir.ui.view" id="view_tree_selectionline">
             <field name="name">Selection line</field>
             <field name="model">estate.nursery.selectionline</field>
@@ -330,6 +376,7 @@
             <field name="name">Selection</field>
             <field name="res_model">estate.nursery.selection</field>
             <field name="view_mode">kanban,tree,form,graph</field>
+            <field name="view_search_selection" ref="estate_nursery.view_form_selection_nursery"/>
         </record>
         <record model="ir.actions.act_window" id="action_list_selectionstage">
             <field name="name">Selection stage</field>
