--- a/estate_nursery/views/dashboard_selection.xml
+++ b/estate_nursery/views/dashboard_selection.xml
@@ -36,6 +36,33 @@
                    ref="estate_nursery.view_graph_selectionline_nursery"/>
         </record>
 
+        <record model="ir.actions.act_window" id="act_batch_graph">
+            <field name="name">Batch Line</field>
+            <field name="res_model">estate.nursery.batch</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">graph</field>
+            <field name="view_id"
+                   ref="estate_nursery.view_graph_batch"/>
+        </record>
+
+        <record model="ir.actions.act_window" id="act_ageseed_batch_graph">
+            <field name="name">Age Seed Batch</field>
+            <field name="res_model">estate.nursery.batch</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">graph</field>
+            <field name="view_id"
+                   ref="estate_nursery.view_graph_ageseed_batch"/>
+        </record>
+
+        <record model="ir.actions.act_window" id="act_abnormal_batch_graph">
+            <field name="name">Abnormal cause Batch</field>
+            <field name="res_model">estate.nursery.batchline</field>
+            <field name="view_type">form</field>
+            <field name="view_mode">graph</field>
+            <field name="view_id"
+                   ref="estate_nursery.view_graph_batchline"/>
+        </record>
+
         <record model="ir.ui.view" id="board_selection_form">
             <field name="name">Selection Dashboard </field>
             <field name="model">board.board</field>
@@ -45,7 +72,7 @@
                     <board style="2-2">
                         <column>
                             <action
-                                string="Group by Batch Abnormal"
+                                string="Jumlah Seleksi Bibit Abnormal "
                                 name="%(act_selection_graph)d"
                                 height="100"
                                 width="200"/>
@@ -62,7 +89,7 @@
                                 height="100"
                                 width="200"/>
                              <action
-                                string="Group by Selection Date"
+                                string="Group by Nursery Information"
                                 name="%(act_selectiondate_graph)d"
                                 height="100"
                                 width="200"/>
@@ -71,6 +98,39 @@
                 </form>
             </field>
         </record>
+
+        <record model="ir.ui.view" id="board_batch_form">
+            <field name="name">Batch Dashboard </field>
+            <field name="model">board.board</field>
+            <field name="type">form</field>
+            <field name="arch" type="xml">
+                <form string="Batch Dashboard">
+                    <board style="2-2">
+                        <column>
+                             <action
+                                string="Group by seed DO batch"
+                                name="%(act_batch_graph)d"
+                                height="100"
+                                width="200"/>
+                            <action
+                                string="Group by Abnormal Cause batch"
+                                name="%(act_abnormal_batch_graph)d"
+                                height="100"
+                                width="200"/>
+                        </column>
+                        <column>
+                            <action
+                                string="Group by seed DO batch"
+                                name="%(act_ageseed_batch_graph)d"
+                                height="100"
+                                width="200"/>
+                        </column>
+                    </board>
+                </form>
+            </field>
+        </record>
+
+        <!--menu,window-->
         <record model="ir.actions.act_window" id="open_board_selection">
           <field name="name">Selection Dashboard</field>
           <field name="res_model">board.board</field>
@@ -79,11 +139,25 @@
           <field name="usage">menu</field>
           <field name="view_id" ref="board_selection_form"/>
         </record>
+        <record model="ir.actions.act_window" id="open_board_batch">
+          <field name="name">batch Dashboard</field>
+          <field name="res_model">board.board</field>
+          <field name="view_type">form</field>
+          <field name="view_mode">form</field>
+          <field name="usage">menu</field>
+          <field name="view_id" ref="board_batch_form"/>
+        </record>
 
+        <!--menu view-->
         <menuitem
             name="Selection Dashboard" parent="base.menu_reporting_dashboard"
             action="open_board_selection"
             sequence="1"
             id="menu_board_selection" icon="terp-graph"/>
+        <menuitem
+            name="Batch Dashboard" parent="base.menu_reporting_dashboard"
+            action="open_board_batch"
+            sequence="2"
+            id="menu_board_batch" icon="terp-graph"/>
     </data>
 </openerp>
